# phish_detection_agent

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: deepagents.dev.yaml  deepagents.local.yaml  deepagents.prod.yaml  logging.yaml
docker/: Dockerfile  docker-compose.local.yaml  docker-compose.mock.yaml
docs/: phish_email_detection_agentic_cloud_service_design.md
src/phish_agent/: __init__.py
src/phish_agent/agents/: phish_detection_agent.py
src/phish_agent/runtime/: api_entry.py  cli.py  loader.py
src/phish_agent/schemas/: email_schema.py
src/phish_agent/tools/: attachment_model_tool.py  fusion_tool.py  image_model_tool.py  policy_tool.py  text_model_tool.py  threat_intel_tool.py  url_model_tool.py
tests/: test_agent_local.py  test_cli.py  test_tools.py
