[project]
name = "phish-agent"
version = "0.1.0"
description = "Phishing detection agent runtime and tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Phish Agent Team" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
    "deepagents",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["src"]
